--- a/test.html
+++ b/test.html
@@ -30,10 +30,13 @@
             <li class="col-sm-3">profile<a href=""></a></li>
             <li class="col-sm-3">market<a href=""></a></li>
         </ul>
+    </div>
+    <div class="container">
         <div class="row">
-            <div class="row g-0">row test</div>
-            <div>no row test</div>
-
+            <div class="row g-10">test1</div>
+            <div class="row g-10">test2</div>
+            <div class="row g-10">test3</div>
+            <div class="row g-10">test3</div>
         </div>        
     </div>
 
