--- a/test2.html
+++ b/test2.html
@@ -48,6 +48,13 @@
     .btnn span{
         color: gray;
     }
+    .checkbox{
+        display: flex;
+        justify-content: space-between;
+    }
+    .checkbox a{
+        color: gray;
+    }
 </style>
 <body>
     <div class="container">
@@ -94,7 +101,7 @@
                 </label>
             </div>
         </div>
-        <div class="checkbox d-flex justify-content space-between">
+        <div class="checkbox">
             <label for="">
                 <input type="checkbox"> 개인정보 수집 이용 동의(필수) 
             </label>
